--- a/images.html
+++ b/images.html
@@ -18,7 +18,7 @@
     </nav>  
     <div class="container">  
         <h2>欢迎来到天空之城！</h2>  
-        <p><img src="images/小老虎头像.jpg" alt="小老虎头像" class="my-image"></p>  
+        <p><img src="images/1.jpg" alt="小老虎头像" class="my-image"></p>  
         <p><img src="images/2.jpg" alt="小老虎头像" class="my-image"></p>  
         <p><img src="images/3.jpg" alt="小老虎头像" class="my-image"></p>  
         <p><img src="images/4.jpg" alt="小老虎头像" class="my-image"></p>  
